--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
         cache: 'pnpm'
         registry-url: 'https://registry.npmjs.org'
     - name: Install Dependencies
-      run: pnpm i --frozen-lockfile --no-verify-store-integrity
+      run: 'DEBUG=* pnpm i --frozen-lockfile --no-verify-store-integrity'
     - name: Publish
       if: ${{ github.ref_name == 'master' }}
       uses: cycjimmy/semantic-release-action@v4
