--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Install Dependencies
       run: pnpm i --frozen-lockfile --no-verify-store-integrity
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEBUG: linkbe,grabghr
     - name: Test
       run: |
@@ -55,6 +56,7 @@ jobs:
     - name: Install Dependencies
       run: pnpm i --frozen-lockfile --no-verify-store-integrity
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEBUG: linkbe,grabghr
     - name: Test CMD
       shell: cmd
@@ -92,6 +94,7 @@ jobs:
     - name: Install Dependencies
       run: pnpm i --frozen-lockfile --no-verify-store-integrity
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEBUG: linkbe,grabghr
     - name: Test
       run: |
